--- a/Mvvm_Example/Mvvm_Example/packages.config
+++ b/Mvvm_Example/Mvvm_Example/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net462" />
   <package id="Microsoft.Toolkit.Mvvm" version="7.1.2" targetFramework="net462" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.4" targetFramework="net462" />
